medical assistant is added in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -28,9 +28,12 @@
     "from PIL import Image\n",
     "from tqdm import tqdm\n",
     "import torch.optim as optim\n",
+    "from dotenv import load_dotenv\n",
     "from torchvision import transforms\n",
     "from torch.utils.data import DataLoader\n",
-    "from sklearn.model_selection import train_test_split"
+    "from langchain_openai import ChatOpenAI\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from langchain_core.output_parsers import StrOutputParser"
    ]
   },
   {
@@ -1333,6 +1336,153 @@
     "\n",
     "    trainer.train()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a9ebaba",
+   "metadata": {},
+   "source": [
+    "## Medical Assistant"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8730d340",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MedicalAssistant:\n",
+    "    def __init__(self, device: str = \"cuda\", image: str = None):\n",
+    "        self.device = device\n",
+    "        self.image = image\n",
+    "\n",
+    "        self.image_channels = 1\n",
+    "\n",
+    "        self.device = device_init(device=device)\n",
+    "\n",
+    "        self.classifier = ViTWithClassifier(\n",
+    "            image_channels=1,\n",
+    "            image_size=224,\n",
+    "            patch_size=16,\n",
+    "            target_size=4,\n",
+    "            encoder_layer=1,\n",
+    "            nhead=8,\n",
+    "            d_model=256,\n",
+    "            dim_feedforward=256,\n",
+    "            dropout=0.1,\n",
+    "            activation=\"gelu\",\n",
+    "            layer_norm_eps=1e-05,\n",
+    "            bias=False,\n",
+    "        ).to(self.device)\n",
+    "\n",
+    "        self.memory = []\n",
+    "\n",
+    "    def load_model(self):\n",
+    "        path = \"./artifacts/checkpoints/best_model/best_model.pth\"\n",
+    "        model = torch.load(path)\n",
+    "\n",
+    "        state_dict = model[\"model_state_dict\"]\n",
+    "        self.classifier.load_state_dict(state_dict=state_dict)\n",
+    "\n",
+    "    def preprocess_image(self):\n",
+    "        if self.image_channels == 1:\n",
+    "            transform = transforms.Compose(\n",
+    "                [\n",
+    "                    transforms.Resize((224, 224)),\n",
+    "                    transforms.ToTensor(),\n",
+    "                    transforms.Grayscale(num_output_channels=1),\n",
+    "                    transforms.CenterCrop((224, 224)),\n",
+    "                    transforms.Normalize([0.5], [0.5]),\n",
+    "                ]\n",
+    "            )\n",
+    "        else:\n",
+    "            transform = transforms.Compose(\n",
+    "                [\n",
+    "                    transforms.Resize((224, 224)),\n",
+    "                    transforms.ToTensor(),\n",
+    "                    transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5]),\n",
+    "                ]\n",
+    "            )\n",
+    "\n",
+    "        image = cv2.imread(self.image)\n",
+    "        image = Image.fromarray(image)\n",
+    "        image = transform(image)\n",
+    "        image = image.unsqueeze(0)\n",
+    "\n",
+    "        return image.to(self.device)\n",
+    "\n",
+    "    def chat(self):\n",
+    "        image = self.preprocess_image()\n",
+    "        self.classifier.eval()\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            predicted = self.classifier(image)\n",
+    "\n",
+    "            score = torch.softmax(input=predicted, dim=1)\n",
+    "            score, _ = torch.max(score, dim=1)\n",
+    "            score = f\"{round(score.item() * 100, 2)}%\"\n",
+    "\n",
+    "            predicted = torch.argmax(predicted, dim=1)[0]\n",
+    "\n",
+    "            if predicted == 0:\n",
+    "                labels = \"Brain: glioma\".title()\n",
+    "            elif predicted == 1:\n",
+    "                labels = \"Brain: Meningioma\".title()\n",
+    "            elif predicted == 2:\n",
+    "                labels = \"Brain: No Tumor\".title()\n",
+    "            else:\n",
+    "                labels = \"Brain: Pituitary\".title()\n",
+    "\n",
+    "        load_dotenv()\n",
+    "\n",
+    "        llm = ChatOpenAI()\n",
+    "        parser = StrOutputParser()\n",
+    "\n",
+    "        initial_response = classifier_prompt | llm | parser\n",
+    "        initial_response = initial_response.invoke(\n",
+    "            {\"predicted_disease\": labels, \"predicted_probability\": score}\n",
+    "        )\n",
+    "\n",
+    "        print(initial_response)\n",
+    "\n",
+    "        self.memory.append(\"AI Response:\\n\" + \" \" + initial_response)\n",
+    "\n",
+    "        while True:\n",
+    "            question = input(\"Human: \")\n",
+    "            if question == \"exit\":\n",
+    "                break\n",
+    "\n",
+    "            question = \"\\n\".join(self.memory) + \"\\nHuman: \" + question\n",
+    "\n",
+    "            response = QA_prompt | llm | parser\n",
+    "            response = response.invoke({\"question\": question})\n",
+    "\n",
+    "            self.memory.append(\"AI Response:\\n\" + \" \" + response)\n",
+    "\n",
+    "            print(\"AI:\\n\", response)\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    parser = argparse.ArgumentParser(description=\"Medical Assistant chatbot\".title())\n",
+    "    parser.add_argument(\"--image\", type=str, help=\"Path to the image file\".capitalize())\n",
+    "    parser.add_argument(\n",
+    "        \"--device\", type=str, help=\"Device to run the model on\".capitalize()\n",
+    "    )\n",
+    "\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    assistant = MedicalAssistant(device=args.device, image=args.image)\n",
+    "\n",
+    "    assistant.load_model()\n",
+    "    assistant.chat()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f558a0f",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
