prompt is added in the notebook

--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -1339,6 +1339,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dbb15aa",
+   "metadata": {},
+   "source": [
+    "## Prompts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "697b725e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "classifier_prompt = PromptTemplate(\n",
+    "    input_variables=[\"predicted_disease\", \"predicted_probability\"],\n",
+    "    template=\"\"\"You are a knowledgeable assistant in the medical field.\n",
+    "\n",
+    "A CNN-based model has analyzed a medical image and predicted the following:\n",
+    "\n",
+    "- Predicted Disease: {predicted_disease}\n",
+    "- Prediction Confidence: {predicted_probability}\n",
+    "\n",
+    "Start your response by stating the predicted disease and the confidence level, then provide a clear, well-researched, and comprehensive explanation. Include:\n",
+    "- A brief description of the disease\n",
+    "- Common symptoms\n",
+    "- Causes and risk factors\n",
+    "- Standard treatment options\n",
+    "- Any necessary follow-up or precautions\n",
+    "\n",
+    "Keep the explanation medically accurate yet easy to understand.\"\"\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "QA_prompt = PromptTemplate(\n",
+    "    input_variables=[\"question\"],\n",
+    "    template=\"\"\"\n",
+    "You are a helpful and knowledgeable assistant in the medical field.\n",
+    "\n",
+    "The user is asking a health-related question. Provide a clear, well-researched, and comprehensive response. Be sure to:\n",
+    "- Explain the answer in simple, understandable terms\n",
+    "- Provide context (e.g., symptoms, treatments, risk factors, prevention)\n",
+    "- Reference medical facts or research where applicable\n",
+    "\n",
+    "Question: {question}\n",
+    "Answer:\n",
+    "\"\"\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a9ebaba",
    "metadata": {},
    "source": [
