--- a/notebooks/ModelPrototype.ipynb
+++ b/notebooks/ModelPrototype.ipynb
@@ -33,7 +33,15 @@
     "from torch.utils.data import DataLoader\n",
     "from langchain_openai import ChatOpenAI\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from langchain_core.output_parsers import StrOutputParser"
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    f1_score,\n",
+    "    confusion_matrix,\n",
+    "    classification_report,\n",
+    ")"
    ]
   },
   {
@@ -1339,6 +1347,105 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd6b8cf4",
+   "metadata": {},
+   "source": [
+    "## Tester"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb14dfb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings(\"ignore\")\n",
+    "class Tester:\n",
+    "    def __init__(self, dataset: str = \"test\", device: str = \"cuda\"):\n",
+    "        self.dataset = dataset\n",
+    "        self.device = device\n",
+    "\n",
+    "        self.device = device_init(device=device)\n",
+    "\n",
+    "    def load_dataset(self):\n",
+    "        path = \"./data/processed/\"\n",
+    "        if self.dataset == \"test\":\n",
+    "            test_dataloader = os.path.join(path, \"test_dataloader.pkl\")\n",
+    "            test_dataloader = load_files(filename=test_dataloader)\n",
+    "\n",
+    "            return test_dataloader\n",
+    "\n",
+    "        elif self.dataset == \"valid\":\n",
+    "            val_dataloader = os.path.join(path, \"valid_dataloader.pkl\")\n",
+    "            val_dataloader = load_files(filename=val_dataloader)\n",
+    "\n",
+    "            return val_dataloader\n",
+    "\n",
+    "        else:\n",
+    "            raise ValueError(\"Dataset must be either 'test' or 'valid'\")\n",
+    "\n",
+    "    def load_model(self):\n",
+    "        classifier = ViTWithClassifier(\n",
+    "            image_channels=config_files()[\"dataloader\"][\"image_channels\"],\n",
+    "            image_size=config_files()[\"dataloader\"][\"image_size\"],\n",
+    "            patch_size=config_files()[\"ViT\"][\"patch_size\"],\n",
+    "            target_size=config_files()[\"dataloader\"][\"target_size\"],\n",
+    "            encoder_layer=config_files()[\"ViT\"][\"encoder_layer\"],\n",
+    "            nhead=config_files()[\"ViT\"][\"nhead\"],\n",
+    "            d_model=config_files()[\"ViT\"][\"d_model\"],\n",
+    "            dim_feedforward=config_files()[\"ViT\"][\"dim_feedforward\"],\n",
+    "            dropout=config_files()[\"ViT\"][\"dropout\"],\n",
+    "            activation=config_files()[\"ViT\"][\"activation\"],\n",
+    "            layer_norm_eps=float(config_files()[\"ViT\"][\"layer_norm_eps\"]),\n",
+    "            bias=config_files()[\"ViT\"][\"bias\"],\n",
+    "        ).to(self.device)\n",
+    "\n",
+    "        path = \"./artifacts/checkpoints/best_model/best_model.pth\"\n",
+    "        model = torch.load(path)\n",
+    "\n",
+    "        state_dict = model[\"model_state_dict\"]\n",
+    "        classifier.load_state_dict(state_dict=state_dict)\n",
+    "\n",
+    "        return classifier\n",
+    "\n",
+    "    def test(self):\n",
+    "        dataset = self.load_dataset()\n",
+    "        classifier = self.load_model()\n",
+    "\n",
+    "        classifier.eval()\n",
+    "\n",
+    "        y_true = []\n",
+    "        y_pred = []\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            for images, labels in dataset:\n",
+    "\n",
+    "                images = images.to(device=self.device)\n",
+    "                labels = labels.to(device=self.device)\n",
+    "\n",
+    "                outputs = classifier(images)\n",
+    "\n",
+    "                _, predicted = torch.max(outputs, 1)\n",
+    "                y_true.extend(labels.cpu().numpy())\n",
+    "                y_pred.extend(predicted.cpu().numpy())\n",
+    "\n",
+    "        print(\"Accuracy: \", accuracy_score(y_true, y_pred))\n",
+    "        print(\"Precision: \", precision_score(y_true, y_pred, average=\"weighted\"))\n",
+    "        print(\"Recall: \", recall_score(y_true, y_pred, average=\"weighted\"))\n",
+    "        print(\"F1 Score: \", f1_score(y_true, y_pred, average=\"weighted\"), \"\\n\")\n",
+    "\n",
+    "        print(\"Confusion Matrix: \\n\", confusion_matrix(y_true, y_pred), \"\\n\")\n",
+    "        print(\"Classification Report: \\n\", classification_report(y_true, y_pred))\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    tester = Tester(dataset=\"test\", device=\"cuda\")\n",
+    "    tester.test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9dbb15aa",
    "metadata": {},
    "source": [
@@ -1530,12 +1637,6 @@
     "    assistant.load_model()\n",
     "    assistant.chat()\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f558a0f",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
